# diagrams-builder

./: .gitignore  .travis.yml  CHANGES  CHANGES.markdown  LICENSE  README.markdown  cabal.haskell-ci  diagrams-builder.cabal  stack.yaml  travis-stack.yaml
.github/workflows/: haskell-ci.yml
latex/: diagrams-latex.sty
src/Diagrams/: Builder.hs
src/Diagrams/Builder/: CmdLine.hs  Modules.hs  Opts.hs
src/tools/: diagrams-builder-cairo.hs  diagrams-builder-pgf.hs  diagrams-builder-ps.hs  diagrams-builder-rasterific.hs  diagrams-builder-svg.hs  diagrams-builder.hs
