name:                diagrams-builder
version:             0.1.0.1
synopsis:            Simple hint-based build service for the diagrams graphics EDSL
-- description:
homepage:            http://projects.haskell.org/diagrams
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          diagrams-discuss@googlegroups.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8
Source-repository head
  type:     darcs
  location: http://patch-tag.com/r/byorgey/diagrams-builder

library
  exposed-modules:     Diagrams.Builder
  build-depends:       base >=4.2 && < 4.6,
                       diagrams-lib >=0.3,
                       hint ==0.3.*,
                       directory,
                       filepath,
                       haskell-src-exts >= 1.11.1 && < 1.14
  hs-source-dirs:      src