name:                diagrams-builder
version:             0.2
synopsis:            hint-based build service for the diagrams graphics EDSL.
description:         diagrams-builder provides backend-agnostic tools for
                     dynamically turning code into compiled diagrams, using
                     the "hint" wrapper to the GHC API.  Useful for creating
                     tools to compile diagrams code embedded in other documents.
                     Supports conditional recompilation using hashing.
homepage:            http://projects.haskell.org/diagrams
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          diagrams-discuss@googlegroups.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8
Source-repository head
  type:     darcs
  location: http://patch-tag.com/r/byorgey/diagrams-builder

library
  exposed-modules:     Diagrams.Builder
  build-depends:       base >=4.2 && < 4.6,
                       diagrams-lib >=0.3,
                       hint ==0.3.*,
                       directory,
                       filepath,
                       haskell-src-exts >= 1.11.1 && < 1.14,
                       cryptohash >= 0.7.4 && < 0.8,
                       bytestring >= 0.9.2 && < 0.10,
                       base16-bytestring >= 0.1.1 && < 0.2
  hs-source-dirs:      src